fix: z-index on background reduced to prevent button block

--- a/src/assets/scss/components/_modals.scss
+++ b/src/assets/scss/components/_modals.scss
@@ -55,6 +55,7 @@
       position: absolute;
       bottom: 15px;
       right: 20px;
+      z-index: -1;
     }
 
     &-header {
